--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.11",
     "react-tagcloud": "^1.2.0",
+    "react-weather": "^0.1.3",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.71.3"
   },
