--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-minimal-pie-chart": "^2.0.0",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.11",
+    "react-svg-piechart": "^1.3.0",
     "react-tagcloud": "^1.2.0",
+    "react-tweet": "^1.1.1",
     "react-weather": "^0.1.3",
+    "recharts": "^1.0.0-alpha.3",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.71.3"
+    "semantic-ui-react": "^0.71.3",
+    "victory": "^0.21.4"
   },
   "scripts": {
     "start": "react-scripts start",
