--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.5.2",
+    "intro.js": "^2.7.0",
+    "intro.js-react": "^0.1.5",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
